# slapdash

./: slapdash.cabal
app/: Main.hs
src/: Lib.hs  Parser.hs
src/Internal/: Parser.hs
src/Slapdash/: AST.hs  Parser.hs
src/Slapdash/Internal/: Parser.hs
test/Internal/: ParserSpec.hs
test/Slapdash/Internal/: ParserSpec.hs
