name:                slapdash
version:             0.1.0.0
homepage:            https://github.com/liambuchanan/slapdash#readme
author:              Liam Buchanan
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Slapdash.AST
                       Slapdash.Parser
                       Slapdash.Internal.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable slapdash
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , slapdash
  default-language:    Haskell2010

test-suite slapdash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Slapdash.Internal.ParserSpec
  build-depends:       base
                     , slapdash
                     , hspec
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/liambuchanan/slapdash
